# vanilla

./: .gitignore  BUILDLOG.md  CONTRIBUTING.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: launch.json  settings.local.json
.github/workflows/: build.yml
docs/wiki/: agent-pipeline.md  api-reference.md  architecture.md  testing.md  vault-schema.md
scripts/: build-sidecar.ps1  build-sidecar.sh  build.ps1  build.sh
sidecar/: config.py  main.py  mcp_server.py  pyproject.toml  requirements-build.txt  vanilla-sidecar.spec
sidecar/agents/: fileback.py  pipeline.py  setup_crew.py
sidecar/db/: database.py  repository.py
sidecar/hooks/: hook-sqlalchemy.py
sidecar/models/: responses.py
sidecar/services/: browser_research.py  code_executor.py  embedding_service.py  git_sync.py  gpu_detect.py  graph_service.py  llm_service.py  paths.py  vault_manager.py  voice_service.py  watcher_bridge.py
sidecar/services/ingestion/: firecrawl_service.py  job_queue.py  marker_service.py  normalizer.py
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/api/: fileWatcher.ts  ingest.ts  onboarding.ts  paths.ts  research.ts  sidecar.ts  voice.ts
src/components/command/: CommandPalette.tsx
src/components/editor/: EditorPanel.tsx  useCodemirror.ts
src/components/graph/: GraphPanel.tsx
src/components/layout/: DropZone.tsx  FileTree.tsx  IngestStatus.tsx  Logo.tsx  ResearchPanel.tsx  ResizableSplit.tsx  SearchPanel.tsx  SidebarRail.tsx  UrlBar.tsx  VoiceButton.tsx
src/components/onboarding/: ApiKeyStep.tsx  DescriptionStep.tsx  FolderSelectStep.tsx  GeneratingStep.tsx  OnboardingFlow.tsx  ReviewStep.tsx
src/components/proposals/: ArticlePreview.tsx  ExecApproval.tsx  ProposalBatch.tsx  ProposalPanel.tsx
src/components/settings/: SettingsPanel.tsx  SyncPanel.tsx
src/hooks/: useTauriSidecar.ts
src/stores/: ambientStore.ts  editorStore.ts  graphStore.ts  statusStore.ts  themeStore.ts  vaultStore.ts  voiceStore.ts
src/styles/: main.css
tests/python/: test_gpu_detect.py  test_graph_service.py  test_job_queue.py  test_normalizer.py  test_paths.py  test_pipeline.py  test_repository.py  test_setup_crew.py  test_vault_manager.py  test_watcher_bridge.py
tests/python/integration/: test_api.py
tests/ts/: paths.test.ts
