[package]
name = "vanilla"
version = "0.1.0"
edition = "2021"
description = "VanillaDB — agent-native knowledge base"

[lib]
name = "vanilla_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "vanilla"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
